add payroll servicew

--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redaxios": "^0.5.1",
+    "rxjs": "^7.5.7"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "prop-types": "^15.8.1",
+    "react-csv": "^2.0.3",
+    "sass": "^1.55.0",
     "typescript": "^4.8.3"
   }
 }
